# DBProxy

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  README.md  README_EN.md  README_ZH.md  aclocal.m4  bootstrap.sh  config.h  config.h.in  config.status  configure  configure.in  libtool  mysql-chassis.pc  mysql-proxy.pc
doc/: DEVELOPMENT_NORM.md  FAQ.md  PROGRAMMING_GUIDE.md  QUICK_START.md  RELEASE_NOTES.md  TEST_GUIDE.md  THEORY_PRACTICES.md  USER_GUIDE.md
doc/img/: admin_state.gstencil  backend_pool.gstencil  proxy_state.gstencil
examples/: Makefile  Makefile.am  Makefile.in  tutorial-basic.lua  tutorial-constants.lua  tutorial-inject.lua  tutorial-keepalive.lua  tutorial-monitor.lua  tutorial-packets.lua  tutorial-prep-stmts.lua  tutorial-query-time.lua  tutorial-resultset.lua  tutorial-rewrite.lua  tutorial-routing.lua  tutorial-scramble.lua  tutorial-states.lua  tutorial-tokenize.lua  tutorial-union.lua  tutorial-warnings.lua
lib/: Makefile  Makefile.am  Makefile.in  active-queries.lua  active-transactions.lua  admin-sql.lua  admin.lua  analyze-query.lua  auditing.lua  chassis.c  commit-obfuscator.lua  crc32-lua.c  crc32.c  crc32.h  glib2.c  histogram.lua  lfs.c  load-multi.lua  lpeg.c  mysql-password.c  mysql-proto.c  posix.c  ro-balance.lua  ro-pooling.lua  rw-splitting.lua  sql-tokenizer-gen.c  sql-tokenizer-lua.c  sql-tokenizer-tokens.c  sql-tokenizer.h  sql-tokenizer.l  time-ticker-lua.c  xtab.lua
lib/proxy/: Makefile  Makefile.am  Makefile.in
m4/: Makefile  Makefile.in
plugins/: Makefile  Makefile.am  Makefile.in
plugins/admin/: Makefile  Makefile.am  Makefile.in  admin-plugin.c
plugins/debug/: Makefile  Makefile.am  Makefile.in  debug-plugin.c
plugins/proxy/: Makefile  Makefile.am  Makefile.in  proxy-percentile.c  proxy-percentile.h  proxy-plugin.c  proxy-plugin.h  proxy-sql-log.c  proxy-sql-log.h
plugins/replicant/: Makefile  Makefile.am  Makefile.in  replicant-plugin.c
script/: Makefile  Makefile.am  Makefile.in  build_dbproxy_rpm.sh  dbproxy.spec  dbproxy_install_local.sh  encrypt.c  mysql-proxyd  source.cnf.samples
src/: Makefile  Makefile.am  Makefile.in  chassis-event-thread.c  chassis-event-thread.h  chassis-exports.h  chassis-filemode.c  chassis-filter.c  chassis-filter.h  chassis-frontend.c  chassis-frontend.h  chassis-gtimeval.c  chassis-keyfile.c  chassis-limits.c  chassis-log.c  chassis-log.h  chassis-mainloop.c  chassis-mainloop.h  chassis-options-utils.c  chassis-options-utils.h  chassis-options.c  chassis-options.h  chassis-path.c  chassis-plugin.c  chassis-plugin.h  chassis-shutdown-hooks.c  chassis-shutdown-hooks.h  chassis-stats.c  chassis-stats.h  chassis-timings.c  chassis-timings.h  chassis-unix-daemon.c  chassis-win32-service.c  disable-dtrace.h  glib-ext-ref.c  glib-ext-ref.h  glib-ext.c  glib-ext.h  lua-env.c  lua-load-factory.c  (+45 more)
tests/suite/: run-tests.lua  test.configure
tests/suite/backend_manager/r/: overload_protect.result  smooth_remove.result  tag_case_sensitive.result
tests/suite/backend_manager/t/: overload_protect.test  smooth_remove.test  tag_case_sensitive.test
tests/suite/basic_manager/r/: basic_manager.result
tests/suite/basic_manager/t/: basic_manager.test
tests/suite/connection_manager/r/: connection_manager.result
tests/suite/connection_manager/t/: connection_manager.test
tests/suite/flowcontrol_manager/r/: filter_function.result  flow_basic.result  flow_configure.result  hint_function.result  threadrunning.result
tests/suite/flowcontrol_manager/t/: filter_function.test  flow_basic.test  flow_configure.options  flow_configure.test  hint_function.test  threadrunning.test
tests/suite/log_manager/r/: log_manager.result
tests/suite/log_manager/t/: log_manager.test
tests/suite/monitor_manager/r/: monitor_manager.result
tests/suite/monitor_manager/t/: monitor_manager.test
tests/suite/mutable_test/r/: mutable_test.result
tests/suite/mutable_test/t/: mutable_test.test
tests/suite/mysql-test/: tests_to_skip.lua
tests/suite/mysql-test/include/: Load_data.inc  audit_log_events.inc  change_file_perms.inc  check-warnings.test  check_ipv4_mapped.inc  check_ipv6.inc  check_no_row_lock.inc  (+89 more)
(+431 files in other folders)
