luaextdir = ${libdir}/mysql-proxy/lua/

pkglib_proxydir = $(luaextdir)/proxy
dist_pkglib_proxy_DATA = \
		 auto-config.lua \
		 balance.lua \
		 commands.lua \
		 parser.lua \
		 tokenizer.lua \
		 test.lua \
		 charset.lua \
		 crc32.lua \
		 filter.lua \
		 log.lua \
		 split.lua \
		 auth.lua \
		 ticker.lua

